--- a/API/WebTraSua/Shared/MainLayout.razor
+++ b/API/WebTraSua/Shared/MainLayout.razor
@@ -1,17 +1,157 @@
 ﻿@inherits LayoutComponentBase
+@using WebTraSua.Pages
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <div class="main">
-        <div class="top-row px-4">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+<nav class="navbar navbar-expand-lg fixed-top bg-white">
+    <div class="container" id="nav">
+        <div class="col-md-4">
+            <div>
+                <img src="logo.png" alt="" class="mb-3" style="width: 36px; height: 36px;">
+                <a class="navbar-brand roboto-regular text-light-emphasis fs-20" style="letter-spacing: -1px;"
+                   href="#">
+                    Năm Chú Mèo
+                    Con
+                </a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
-
-        <div class="content px-4">
-            @Body
+        <div class="col-md-5 collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-black fs-16 me-75" aria-current="page" href="index.html">
+                        <span class="nav-hover">TRANG CHỦ</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-black fs-16 me-75" href="shop.html">
+                        <span class="nav-hover">CỬA HÀNG</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-black fs-16 me-75" href="blog.html">
+                        <span class="nav-hover">BÀI VIẾT</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-3 mt-3">
+            <ul class="float-end row">
+                <div class="col-md-4">
+                    <a class="nav-hover nav-link text-black fs-16 fw-medium">
+                        <i class="me-3 fa-solid fa-magnifying-glass"></i>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a class="nav-hover nav-link text-black fs-16 fw-medium" href="user.html">
+                        <i class="me-3 fa-regular fa-user"></i>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a class="nav-hover nav-link text-black fs-16 fw-medium" href="cart.html">
+                        <i class="me-3 fa-solid fa-cart-shopping"></i>
+                    </a>
+                </div>
+            </ul>
         </div>
     </div>
-</div>
+</nav>
+
+<main class="container" style="margin-top: 72px;">
+    @Body
+
+
+    <footer class="bg-F4F4F4 mt-96 color-1C1B1F">
+        <div class="col-md-10 row mx-auto pt-5 pb-4">
+            <div class="col-md-3">
+                <p class="text-black">DANH MỤC</p>
+                @foreach (Categories item in cateFour)
+                {
+                    <a href="">
+                        <p class="fs-14">
+                            @item.Name
+                        </p>
+                    </a>
+                }
+            </div>
+            <div class="col-md-3">
+                <p class="text-black">BÀI VIẾT</p>
+                @foreach (Blog item in blog)
+                {
+                    <a href="">
+                        <p class="fs-14 ellipsis">
+                            @item.Title
+                        </p>
+                    </a>
+                }
+            </div>
+            <div class="col-md-3">
+                <p class="text-black">CHĂM SÓC KHÁCH HÀNG</p>
+                <p class="fs-14">
+                    Đặt hàng và Thanh toán
+                </p>
+                <p class="fs-14">
+                    Vận chuyển
+                </p>
+                <p class="fs-14">
+                    Chất lượng sản phẩm
+                </p>
+                <p class="fs-14">
+                    Điều khoản và Điều kiện
+                </p>
+            </div>
+            <div class="col-md-3">
+                <p class="text-black">LIÊN HỆ</p>
+                <p class="fs-14">
+                    <i class="fa-solid fa-location-dot"></i>
+                    Địa chỉ: Phường Thường Thạnh, Quận Ninh Kiều, Thành phố Cần Thơ
+                </p>
+                <p class="fs-14">
+                    <i class="fa-solid fa-envelope"></i>
+                    Email: fivepearscontact@gmail.com
+                </p>
+                <p class="fs-14">
+                    <i class="fa-solid fa-phone"></i>
+                    Điện thoại: 0942 748 866
+                </p>
+            </div>
+        </div>
+    </footer>
+</main>
+
+@code {
+    [Inject]
+    public NavigationManager NV { get; set; }
+
+    string urlCate = "http://localhost:20714/api/Categories";
+    string urlBlog = "http://localhost:20714/api/Blogs";
+
+    public IEnumerable<Categories> cateFour { get; set; } = Enumerable.Empty<Categories>();
+
+    public IEnumerable<Blog> blog { get; set; } = Enumerable.Empty<Blog>();
+
+    protected async override Task OnInitializedAsync()
+    {
+        await Get();
+    }
+
+    async Task Get()
+    {
+        using (var httpClient = new HttpClient())
+        {
+            using (var response = await httpClient.GetAsync(urlCate))
+            {
+                string apiResponse = await response.Content.ReadAsStringAsync();
+                var allCategories = JsonConvert.DeserializeObject<List<Categories>>(apiResponse);
+                cateFour = allCategories.OrderByDescending(c => c.CateID).Take(5);
+            }
+
+            using (var response = await httpClient.GetAsync(urlBlog))
+            {
+                string apiResponse = await response.Content.ReadAsStringAsync();
+                blog = JsonConvert.DeserializeObject<List<Blog>>(apiResponse).OrderByDescending(b => b.Id).Take(5);
+            }
+        }
+    }
+}
