--- a/API/WebTraSua/Shared/MainLayout.razor
+++ b/API/WebTraSua/Shared/MainLayout.razor
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black fs-16 me-75" href="shop.html">
+                    <a class="nav-link text-black fs-16 me-75" href="shop">
                         <span class="nav-hover">CỬA HÀNG</span>
                     </a>
                 </li>
