--- a/API/WebTraSua/Pages/ShopPage/ShopPage.razor
+++ b/API/WebTraSua/Pages/ShopPage/ShopPage.razor
@@ -1,8 +1,6 @@
 ﻿@page "/shop"
 @inject NavigationManager nv;
-<PageTitle>get role</PageTitle>
 <h3>Shop</h3>
-
 
 <!doctype html>
 <html lang="en">
@@ -60,10 +58,10 @@
         .btn-mua-ngay {
             display: none;
             position: absolute;
-            bottom: -45px;
-            left: 68%;
+            bottom: -40px;
+            left: 50%;
             transform: translateX(-50%);
-            width: 315px;
+            width: 100%;
         }
 
         .product-container:hover .btn-mua-ngay {
@@ -118,28 +116,18 @@
     <main class="container">
         <div class="row">
             <div class="col-md-3">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        BỘ SƯU TẬP(1)
-                        <a style="float: right;color: black;" class="text-decoration-none" href="#">+</a>
-                    </li>
-                    <li class="list-group-item">
-                        NGUỒN GỐC
-                        <a style="float: right;color: black;" class="text-decoration-none" href="#">+</a>
-                    </li>
-                    <li class="list-group-item">
-                        HƯƠNG VỊ
-                        <a style="float: right;color: black;" class="text-decoration-none" href="#">+</a>
-                    </li>
-                    <li class="list-group-item">
-                        CHẤT LƯỢNG
-                        <a style="float: right;color: black;" class="text-decoration-none" href="#">+</a>
-                    </li>
-                    <li class="list-group-item">
-                        CÀ PHÊ
-                        <a style="float: right;color: black;" class="text-decoration-none" href="#">+</a>
-                    </li>
-                </ul>
+                @if(categories != null)
+                {
+                    @foreach(var cate in categories)
+                    {
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                @cate.Name
+                                <a style="float: right;color: black;" class="text-decoration-none" href="#">+</a>
+                            </li>
+                        </ul>
+                    }
+                }
             </div>
             <div class="col-md-9">
                 <div class="row">
@@ -148,19 +136,19 @@
                         @foreach (var product in products)
                         {
                             <div class="col-md-4 md-4 mt-5">
-                                <a class="nav-link text-black fs-16 me-75" href="details/@product.ProductID">
-                                    <div class="product-container">
+                                <div class="product-container">
+                                    <a class="nav-link text-black fs-16 me-75" href="details/@product.ProductID">
                                         <img src="@(product.Image.FirstOrDefault()?.Name ?? "https://via.placeholder.com/306x301")"
                                              style="height: 301px; width: 306px;" alt="">
                                         <div class="mt-3 text-center">
                                             <p style="margin-bottom: 0rem;margin-left: 77px;">@product.Name</p>
                                             <p style="margin-bottom: 0rem;margin-left: 77px;">@product.Size_Product.FirstOrDefault()?.Price VNĐ</p>
                                         </div>
-                                        <a href="details/@product.ProductID" class="btn-mua-ngay btn btn-primary mt-4 rounded-1">
-                                            MUA NGAY
-                                        </a>
-                                    </div>
-                                </a>
+                                    </a>
+                                    <a href="details/@product.ProductID" class="btn-mua-ngay btn btn-primary mt-4 rounded-1">
+                                        MUA NGAY
+                                    </a>
+                                </div>
                             </div>
                         }
                     }
@@ -175,7 +163,7 @@
     </main>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            integrity="sha384-BBtl+eGJRgQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"></script>
 </body>
 
