--- a/API/WebTraSua/wwwroot/style.css
+++ b/API/WebTraSua/wwwroot/style.css
@@ -277,3 +277,15 @@ body {
         opacity: 0.9;
     }
 }
+
+.dropdown-toggle::after {
+    display: none;
+}
+
+.dropdown-menu {
+    margin-top: 0; 
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
