--- a/API/WebTraSua/wwwroot/style.css
+++ b/API/WebTraSua/wwwroot/style.css
@@ -1,78 +1,6 @@
 body {
-    font-family: 'Roboto';
+    font-family: 'Montserrat';
     background-color: #FEFEFE;
-}
-
-/* font */
-.roboto-thin {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-}
-
-.roboto-light {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-}
-
-.roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.roboto-medium {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-}
-
-.roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-.roboto-black {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-}
-
-.roboto-thin-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: italic;
-}
-
-.roboto-light-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-}
-
-.roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-}
-
-.roboto-medium-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: italic;
-}
-
-.roboto-bold-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-}
-
-.roboto-black-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: italic;
 }
 
 /* fix-container-fluid */
@@ -160,16 +88,15 @@ body {
 /*nav hover */
 .nav-hover {
     color: #0000;
-    background:
-        linear-gradient(90deg, #ababab91 50%, #000 0) var(--_p, 100%)/200% no-repeat;
+    background: linear-gradient(90deg, #ababab91 50%, #000 0) var(--_p, 100%)/200% no-repeat;
     -webkit-background-clip: text;
     background-clip: text;
     transition: .4s;
 }
 
-.nav-hover:hover {
-    --_p: 0%;
-}
+    .nav-hover:hover {
+        --_p: 0%;
+    }
 
 /* giới hạn dòng và dấu .. */
 .ellipsis {
@@ -203,16 +130,16 @@ body {
     border-radius: 0;
 }
 
-.btn-black:hover {
-    background-color: white;
-    color: black;
-    font-size: 14px;
-    font-weight: 700;
-    padding-top: 18px;
-    padding-bottom: 18px;
-    border: 2px solid black;
-    border-radius: 0;
-}
+    .btn-black:hover {
+        background-color: white;
+        color: black;
+        font-size: 14px;
+        font-weight: 700;
+        padding-top: 18px;
+        padding-bottom: 18px;
+        border: 2px solid black;
+        border-radius: 0;
+    }
 
 /* button outline black */
 .btn-outline-black {
@@ -226,16 +153,16 @@ body {
     border-radius: 0;
 }
 
-.btn-outline-black:hover {
-    background-color: black;
-    color: white;
-    font-size: 14px;
-    font-weight: 700;
-    padding-top: 18px;
-    padding-bottom: 18px;
-    border: 2px solid black;
-    border-radius: 0;
-}
+    .btn-outline-black:hover {
+        background-color: black;
+        color: white;
+        font-size: 14px;
+        font-weight: 700;
+        padding-top: 18px;
+        padding-bottom: 18px;
+        border: 2px solid black;
+        border-radius: 0;
+    }
 
 /* bg-color */
 .bg-F4F4F4 {
@@ -255,8 +182,8 @@ body {
     animation: float 4s ease-in-out infinite;
     display: block;
     margin: 0 auto;
-    border-radius: 20px; /* Làm tròn góc */
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); /* Tạo bóng mềm */
+    border-radius: 20px;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
 }
 
 @keyframes float {
@@ -264,14 +191,17 @@ body {
         transform: translateY(0) rotate(0deg);
         opacity: 1;
     }
+
     25% {
         transform: translateY(-10px) rotate(-2deg);
         opacity: 0.9;
     }
+
     50% {
         transform: translateY(-20px) rotate(0deg);
         opacity: 0.8;
     }
+
     75% {
         transform: translateY(-10px) rotate(2deg);
         opacity: 0.9;
@@ -283,9 +213,102 @@ body {
 }
 
 .dropdown-menu {
-    margin-top: 0; 
+    margin-top: 0;
 }
 
 .dropdown:hover .dropdown-menu {
     display: block;
 }
+
+a {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+    a:hover {
+        color: #747474;
+    }
+
+.col-md-4 img,
+.img_col6 img {
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+    .col-md-4 img:hover,
+    .img_col6 img:hover {
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+        transform: scale(1.05);
+    }
+/*chứng nhận*/
+@keyframes wave {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-20px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.animate-wave {
+    animation: wave 6s ease-in-out infinite;
+}
+
+
+/*voucher*/
+.voucher {
+    background-color: rgb(227, 240, 230);
+    border: 3px solid white;
+    border-radius: 3px;
+    padding: 30px 20px 20px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    text-align: center;
+}
+
+    .voucher:hover {
+        transform: scale(1.05);
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    }
+
+    .voucher i {
+        font-size: 2rem;
+        color: orangered;
+    }
+
+/* Cải tiến cho carousel */
+.carousel-item {
+    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+}
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 3px;
+    padding: 15px;
+    bottom: 20px;
+}
+
+    .carousel-caption h5 {
+        font-size: 20px;
+        font-weight: bold;
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    }
+/* Nút điều hướng */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 25%;
+}
+
+    .carousel-control-prev-icon::before,
+    .carousel-control-next-icon::before {
+        font-size: 2rem;
+        color: #fff;
+    }
