[FE] - href các trang

--- a/API/WebTraSua/Pages/HomePage/Home.razor
+++ b/API/WebTraSua/Pages/HomePage/Home.razor
@@ -271,7 +271,7 @@
                     @item.Decription
                 </p>
 
-                <div class="btn btn-outline-black mt-30" style="width: 360px;">MUA TRÀ SỮA</div>
+                <a class="btn btn-outline-black mt-30" href="/shop" style="width: 360px;">MUA TRÀ SỮA</a>
             </div>
         </div>
         <div class="col-md-6 img_col6">
