--- a/API/WebTraSua/Shared/MainLayout.razor
+++ b/API/WebTraSua/Shared/MainLayout.razor
@@ -23,17 +23,17 @@
         <div class="col-md-5 collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-black fs-16 me-75" aria-current="page" href="index.html">
+                    <a class="nav-link text-black fs-16 me-75" aria-current="page" href="/">
                         <span class="nav-hover">TRANG CHỦ</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black fs-16 me-75" href="shop.html">
+                    <a class="nav-link text-black fs-16 me-75" href="/shop">
                         <span class="nav-hover">CỬA HÀNG</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-black fs-16 me-75" href="blog.html">
+                    <a class="nav-link text-black fs-16 me-75" href="/blog">
                         <span class="nav-hover">BÀI VIẾT</span>
                     </a>
                 </li>
@@ -69,13 +69,14 @@
                             {
                                 <li>
                                     <a class="dropdown-item" href="/login">Đăng nhập</a>
+                                    <a class="dropdown-item" href="/register">Đăng ký</a>
                                 </li>
                             }
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-2">
-                    <a class="nav-hover nav-link text-black fs-16 fw-medium" href="cart.html">
+                    <a class="nav-hover nav-link text-black fs-16 fw-medium" href="/">
                         <i class="me-3 fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
