--- a/API/WebTraSua/wwwroot/style.css
+++ b/API/WebTraSua/wwwroot/style.css
@@ -312,3 +312,92 @@ a {
         font-size: 2rem;
         color: #fff;
     }
+
+img {
+    object-fit: cover;
+}
+
+/*details*/
+.nav-hover:hover {
+    transform: scale(1.5);
+    transition: all .3s ease-in-out;
+    font-weight: bold;
+}
+
+.btn-size {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    padding: 10px;
+    margin: 0px 0px 30px 20px;
+    border: 2px solid transparent;
+}
+
+    .btn-size:hover {
+        border-color: rgb(239, 159, 56);
+    }
+
+.quantity-control {
+    display: flex;
+    align-items: center;
+}
+
+    .quantity-control button {
+        border: none;
+        background: none;
+        font-size: 1.5rem;
+        padding: 0 10px;
+    }
+
+    .quantity-control input {
+        width: 50px;
+        text-align: center;
+        border: none;
+        background: none;
+        font-size: 1rem;
+    }
+
+
+
+.info-section {
+    background-color: #f7f7f7;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+    .info-section h3 {
+        margin-bottom: 20px;
+    }
+
+    .info-section .icon-text {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+        .info-section .icon-text i {
+            margin-right: 10px;
+            font-size: 1.5rem;
+        }
+
+    .info-section hr {
+        margin: 0.5rem 0;
+    }
+
+.same-product {
+    text-align: center;
+    margin: 40px 0 20px;
+}
+
+.secondary-img {
+    margin-top: 10px;
+    border-radius: 10px;
+}
+
+.main-image {
+    border-radius: 10px;
+}
+
+.card-prodcut-same {
+    border: none;
+}
