--- a/API/Admin/Shared/NavMenu.razor
+++ b/API/Admin/Shared/NavMenu.razor
@@ -22,6 +22,23 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="GetBanner">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Get Banner
+            </NavLink>
+        </li><li class="nav-item px-3">
+            <NavLink class="nav-link" href="CreateBanner">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Create Banner
+            </NavLink>
+        </li> <li class="nav-item px-3">
+            <NavLink class="nav-link" href="UpdateBanner">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Update Banner
+            </NavLink>
+        </li><li class="nav-item px-3">
+            <NavLink class="nav-link" href="DeleteBanner">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Delete Banner
+            </NavLink>
+        </li>
     </ul>
 </div>
 
